deskop and tablet footer fix

--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
             </div>
             <div class="bottom-head">
                 <ul class="header-menu">
-                    <li>
+                    <li class="humbuger-menu">
                         <span>
                             <i class="fa fa-bars"></i>
                         </span>
+                        <!-- <div class="humbuger-menu__wrap"> -->
+                            <!-- <div class="humbuger-menu__container"> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
                     </li>
                     <li class="activ">
                         <span>HOME</span>
@@ -861,7 +865,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer__container-column-wrap"><div class="footer__container-column">
+                <div class="footer__container-column-wrap">
+                    <div class="footer__container-column">
                     <div class="footer__header">
                         <h3>EDITOR'S CHOICE</h3>
                     </div>
@@ -897,9 +902,9 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                
-                <div class="footer__container-column">
+                    </div>
+                    
+                    <div class="footer__container-column">
                     <div class="footer__header">
                         <h3>TAGS CLOUD</h3>
                     </div>
@@ -938,7 +943,8 @@
                             <span>Adventurea</span>
                         </div>
                     </div>
-                </div></div>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
