--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     </div>
                     <div class="latest-preview__items">
                         <div class="latest-preview__item">
-                            <img class="lp-pic" src="img/lp-1.jpg">
+                            <div class="lp-pic"></div> 
                             <h4>Teamfight Tactics is in chaos after patch...</h4>
                             <ul class="latest-preview__item-date">
                                 <li>
@@ -301,7 +301,7 @@
                             </ul>
                         </div>
                         <div class="latest-preview__item">
-                            <img class="lp-pic" src="img/lp-2.jpg">
+                            <div class="lp-pic"></div> 
                             <h4>Lenovo’s y540 gaming laptop with an rtx 2060...</h4>
                             <ul class="latest-preview__item-date">
                                 <li>
@@ -315,7 +315,7 @@
                             </ul>
                         </div>
                         <div class="latest-preview__item">
-                            <img class="lp-pic" src="img/lp-3.jpg">
+                            <div class="lp-pic"></div> 
                             <h4>A monter prom poster got hijacked for a...</h4>
                             <ul class="latest-preview__item-date">
                                 <li>
@@ -329,7 +329,7 @@
                             </ul>
                         </div>
                         <div class="latest-preview__item">
-                            <img class="lp-pic" src="img/lp-4.jpg">
+                            <div class="lp-pic"></div>
                             <h4>Facebook wants to read your thoughts with...</h4>
                             <ul class="latest-preview__item-date">
                                 <li>
@@ -903,7 +903,7 @@
                         </div>
                     </div>
                     </div>
-                    
+
                     <div class="footer__container-column">
                     <div class="footer__header">
                         <h3>TAGS CLOUD</h3>
