mobile adaptive sections intro, latest preview

--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
                                 <li>Platform</li>
                                 <li>hardware</li>
                                 <li>Reviews</li>
+                                <i class="fa fa-chevron-left"></i>
+                                <i class="fa fa-chevron-right"></i>
                             </ul>
                             <div class="news__chevron">
                                 <i class="fa fa-chevron-left"></i>
