news section desktop fix, mobile adaptive

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </div>
                         </div>
                         <div class="news__main-item">
-                            <img src="img/news-1.jpg">
+                            <div class="news__main-item-background"></div>
                             <div class="news__text-container">    
                                 <div class="menu-spec">
                                     <span>REVIEWS</span>
@@ -386,63 +386,72 @@
                             </div>
                         </div>
                         <div class="news__row">
-                            <div class="news__row-item">
-                                <div class="news__row-item-reviews">
-                                    <div class="menu-spec">
-                                        <span>REVIEWS</span>
+                            <div class="news__row-item-wrap">
+                                <div class="news__row-item">
+                                    <div class="news__row-item-reviews">
+                                        <div class="menu-spec">
+                                            <span>REVIEWS</span>
+                                        </div>
                                     </div>
                                 </div>
-                                <img src="img/news-3.jpg">
-                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
-                                <ul class="news__item-date">
-                                    <li>
-                                        <i class="fa fa-clock-o"></i>
-                                    </li>
-                                    <li> Aug 01, 2019</li>
-                                    <li>
-                                        <i class="fa fa-comment-o"></i>
-                                    </li>
-                                    <li>20</li>
-                                </ul>
+                                <div class="news__row-item-content">
+                                    <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
+                                    <ul class="news__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019</li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="news__row-item">
-                                <div class="news__row-item-reviews">
-                                    <div class="menu-spec">
-                                        <span>REVIEWS</span>
+                            <div class="news__row-item-wrap">  
+                                <div class="news__row-item">
+                                    <div class="news__row-item-reviews">
+                                        <div class="menu-spec">
+                                            <span>REVIEWS</span>
+                                        </div>
                                     </div>
                                 </div>
-                                <img src="img/news-4.jpg">
-                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
-                                <ul class="news__item-date">
-                                    <li>
-                                        <i class="fa fa-clock-o"></i>
-                                    </li>
-                                    <li> Aug 01, 2019</li>
-                                    <li>
-                                        <i class="fa fa-comment-o"></i>
-                                    </li>
-                                    <li>20</li>
-                                </ul>
-                            </div>
-                            <div class="news__row-item">
-                                <div class="news__row-item-reviews">
-                                    <div class="menu-spec">
-                                        <span>REVIEWS</span>
+                                <div class="news__row-item-content">
+                                    <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
+                                    <ul class="news__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019</li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
+                            </div>  
+                            <div class="news__row-item-wrap">  
+                                <div class="news__row-item">
+                                    <div class="news__row-item-reviews">
+                                        <div class="menu-spec">
+                                            <span>REVIEWS</span>
+                                        </div>
                                     </div>
                                 </div>
-                                <img src="img/news-2.jpg">
-                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
-                                <ul class="news__item-date">
-                                    <li>
-                                        <i class="fa fa-clock-o"></i>
-                                    </li>
-                                    <li> Aug 01, 2019</li>
-                                    <li>
-                                        <i class="fa fa-comment-o"></i>
-                                    </li>
-                                    <li>20</li>
-                                </ul>
-                            </div>
+                                <div class="news__row-item-content">
+                                    <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
+                                    <ul class="news__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019</li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
+                            </div>  
                         </div>
                     </div>
                     <div class="news__right-column">
